[package]
name = "card-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
aho-corasick = "1.1.3"
anyhow = "1.0.89"
csv = "1.3.0"
genanki-rs = "0.4.0"
html-escape = "0.2.13"
indexical = "0.6.1"
indicatif = "0.17.8"
itertools = "0.13.0"
jieba-rs = "0.7.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unicode-segmentation = "1.12.0"

[profile.release]
debug = true
